# oracle-cli-rs

./: Cargo.toml  README.md  config.json
src/: config.rs  db.rs  main.rs
