[package]
name = "oracle-cli-rs"
version = "0.1.0"
authors = ["gox <gox.roche@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oracle = { version = "0.3.0", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.1"